force-app/main/default/objects/Employee__c/fields/Completed_Trainings__c.field-meta.xml
<CustomField>
    <fullName>Completed_Trainings__c</fullName>
    <label>Completed Trainings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>