force-app/main/default/objects/Employee__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <formula>IF(
    Incomplete_Trainings__c + Completed_Trainings__c == 0, 
    0,
    Completed_Trainings__c / (Incomplete_Trainings__c + Completed_Trainings__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>