force-app/main/default/objects/Employee__c/fields/Employee_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee&apos;s related system user</description>
    <label>Employee User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>