force-app/main/default/objects/Employee__c/fields/Incomplete_Trainings__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Trainings__c</fullName>
    <label>Incomplete Trainings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>